--- a/src/mental-health/index.v.html
+++ b/src/mental-health/index.v.html
@@ -1,15 +1,17 @@
-<style>
-    .main h1, .main h3 {
-        color: rgb(var(--black));
+<style media="screen">
+    .main {
+        background-image: url('/mental-health/hills-sunset.jpg');
     }
 </style>
 
-<div class="main yellow">
-    <div class="wrap">
-        <div class="row center-xs">
-            <div class="col-xs">
-                <h1>MENTAL HEALTH</h1>
-                <h3>dual diagnosis treamtnet and mental health</h3>
+<div class="main">
+    <div class="gradient">
+        <div class="wrap">
+            <div class="row center-xs">
+                <div class="col-xs">
+                    <h1>MENTAL HEALTH</h1>
+                    <h3>dual diagnosis treamtnet and mental health</h3>
+                </div>
             </div>
         </div>
     </div>
@@ -25,18 +27,8 @@
     <p>If it is determined though clinical assessment after a period of sobriety that a client is suffering from both a substance use disorder, as well as a mental health disorder, both conditions will be treated concurrently by Flatirons Recovery Center’s skilled therapeutic and medical teams.</p>
 </div>
 <div class="green">
-    <div class="wrap">
-        <div class="row center-xs">
-            <h2>Get In Touch With A Professional</h2>
-        </div>
-        <div class="row center-xs">
-            <div class="col-xs">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <!-- { "partial": "/assets/partials/call-to-action-1.p.html" } -->
 
-                <a class="button border" href="#">Call Now</a>
-            </div>
-        </div>
-    </div>
 </div>
 <div class="wrap">
 
