--- a/src/therapy/index.v.html
+++ b/src/therapy/index.v.html
@@ -1,10 +1,17 @@
+<style media="screen">
+    .main {
+        background-image: url('/therapy/blue-brook.jpg');
+    }
+</style>
 
-<div class="main orange">
-    <div class="wrap">
-        <div class="row center-xs">
-            <div class="col-xs">
-                <h1>THERAPY</h1>
-                <h3>learn more about our addiction treatment center</h3>
+<div class="main">
+    <div class="gradient">
+        <div class="wrap">
+            <div class="row center-xs">
+                <div class="col-xs">
+                    <h1>THERAPY</h1>
+                    <h3>learn more about our addiction treatment center</h3>
+                </div>
             </div>
         </div>
     </div>
@@ -12,40 +19,51 @@
 
 <div class="wrap">
     <div class="row">
-        <div class="col-xs">
-            <h2>Individual Therapy</h2>
+        <div class="col-xs-12">
+            <h2>Therapy</h2>
 
+            <h3>individual</h3>
             <p>At Flatirons Recovery Center, clients will engage in a weekly, 1-hour individual therapy session in order to develop more insight into the painful habitual patterns that have influenced their substance use disorder, as well as to develop more ability to take appropriate action to begin shifting those.</p>
             <p>Topics that may be addressed during individual sessions include:</p>
-            <ul>
-                <li>Healing trauma</li>
-                <li>Habitual thought and behavioral patterns</li>
-                <li>Healing and shifting outdated core beliefs</li>
-                <li>Family systems dynamics</li>
-                <li>Recovery aspirations and goals</li>
-                <li>Self-esteem, identity, and confidence</li>
-                <li>Direct communication</li>
-                <li>Relationships</li>
-                <li>Developing healthy boundaries</li>
-            </ul>
-
-            <h2>Group Therapy</h2>
+                <ul>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm">
+                            <li>Healing trauma</li>
+                            <li>Habitual thought and behavioral patterns</li>
+                            <li>Healing and shifting outdated core beliefs</li>
+                            <li>Family systems dynamics</li>
+                            <li>Recovery aspirations and goals</li>
+                        </div>
+                        <div class="col-xs-12 col-sm">
+                            <li>Self-esteem, identity, and confidence</li>
+                            <li>Direct communication</li>
+                            <li>Relationships</li>
+                            <li>Developing healthy boundaries</li>
+                        </div>
+                    </div>
+                </ul>
+        </div>
+        <div class="col-xs-12 col-sm">
+            <h3>Group Therapy</h3>
             <p>At Flatirons Recovery Center, clients will engage in 30-hours of group programming during PHP/Day Treatment programming, and 9-15 hours of group programming during Intensive Outpatient programming.</p>
-
-            <h2>Family Therapy</h2>
+        </div>
+        <div class="col-xs-12 col-sm">
+            <h3>Family Therapy</h3>
             <p>At Flatirons Recovery Center, client will engage in a bi-weekly, 1-hour family therapy session, in order to develop more insight into the systemic ways in which substance use disorders may be impacting their family life.</p>
-
-            <h2>Support Groups for Family Members</h2>
+        </div>
+        <div class="col-xs-12">
+            <h3>Support Groups for Family Members</h3>
             <p>Flatirons Recovery Center highly recommends that family members support themselves while their loved one is in treatment. The following in a small sampling of the community supports that may be appropriate and/or available in your community.</p>
-            <ul>
-                <li>SMART Recovery Family and Friends</li>
-                <li>NAMI</li>
-                <li>Al-Anon</li>
-                <li>Alateen</li>
-                <li>GRASP</li>
-                <li>Families Anonymous</li>
-            </ul>
+        </div>
+    </div>
+</div>
 
+<div class="blue">
+    <!-- { "partial": "/assets/partials/call-to-action-1.p.html" } -->
+</div>
+<div class="wrap">
+    <div class="row">
+        <div class="col-xs">
             <h2>Modalities</h2>
 
             <h3>Dialectical Behavioral Therapy (DBT)</h3>
