--- a/src/about/index.v.html
+++ b/src/about/index.v.html
@@ -1,10 +1,17 @@
+<style media="screen">
+    .main {
+        background-image: url('/about/wooden-fence.jpg');
+    }
+</style>
 
-<div class="main blue">
-    <div class="wrap">
-        <div class="row center-xs">
-            <div class="col-xs">
-                <h1>ABOUT</h1>
-                <h3>learn more about our addiction treatment center</h3>
+<div class="main">
+    <div class="gradient">
+        <div class="wrap">
+            <div class="row center-xs">
+                <div class="col-xs">
+                    <h1>ABOUT</h1>
+                    <h3>learn more about our addiction treatment center</h3>
+                </div>
             </div>
         </div>
     </div>
