--- a/src/admissions/index.v.html
+++ b/src/admissions/index.v.html
@@ -1,4 +1,5 @@
-<style media="screen">
+
+<style>
     .main {
         background-image: url('/admissions/flatirons-hill.jpg');
     }
@@ -38,19 +39,17 @@
 <div class="blue">
     <div class="wrap">
         <div class="row center-xs">
-            <h1>FAQ's</h1>
+            <h1>FAQs</h1>
         </div>
         <div class="row center-xs">
             <div class="col-xs">
-                <h4>Consider reading our frequentyl asked questions. Learn more about Flatirons Recovery Center.</h4>
-
-                <a class="button border" href="/about#faq">More About Us</a>
+                <h4>Consider reading our frequently asked questions. Learn more about Flatirons Recovery Center.</h4>
+                <a class="button border" href="/faq">frequently asked questions</a>
             </div>
         </div>
     </div>
 </div>
 
 <div class="wrap">
-
     <!-- { "partial": "/assets/partials/verify-insurance.p.html" } -->
 </div>
