--- a/src/admission/index.v.html
+++ b/src/admission/index.v.html
@@ -1,7 +1,7 @@
 
 <style>
     .main {
-        background-image: url('/admissions/flatirons-hill.jpg');
+        background-image: url('/admission/flatirons-hill.jpg');
     }
 </style>
 
@@ -21,7 +21,7 @@
 <div class="wrap">
     <div class="row">
         <div class="col-xs">
-            <h2>Admissions Process</h2>
+            <h2>Admission Process</h2>
             <ul>
                 <li>Client and/or client’s family makes initial contact with Flatirons Recovery Center’s admissions staff to gather information both on our program, as well as to inform our admission’s team regarding treatment needs—in particular, whether or not the client may need detoxification services before admission.</li>
                 <li>Flatirons Recovery Center performs verification of insurance benefits.</li>
