--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -24,11 +24,12 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="/about">About</a></li>
                     <li><a href="/therapy">Therapy</a></li>
-                    <li><a href="/mental-health">Mental Health</a></li>
+                    <li><a href="/addiction">Addiction</a></li>
                     <li>
                         <a>More</a>
                         <ul>
-                            <li><a href="/admissions">Admissions</a></li>
+                            <li><a href="/mental-health">Mental Health</a></li>
+                            <li><a href="/admission">Admission</a></li>
                             <li><a href="/contact">Contact</a></li>
                         </ul>
                     </li>
