made phone number consistent

--- a/src/index.v.html
+++ b/src/index.v.html
@@ -9,6 +9,7 @@
                 <h1>Flatirons Recovery</h1>
             </div>
             <div class="col-xs-12">
+                <a class="button blue" href="tel:000-000-0000">Call Now</a>
                 <a class="button blue" href="#">Call Now</a>
             </div>
         </div>
@@ -78,7 +79,7 @@
         <div class="row center-xs">
             <div class="col-xs">
                 <h4>If you would like to reach out to a treatment professional at Flatirons Recovery Center<br />
-                    call us at 555-555-5555</h4>
+                    call us at 000-000-0000</h4>
 
                 <a class="button border" href="/contact">Contact Us</a>
             </div>
