code clean up and fixes

--- a/src/index.v.html
+++ b/src/index.v.html
@@ -9,8 +9,8 @@
                 <h1>Flatirons Recovery</h1>
             </div>
             <div class="col-xs-12">
-                <a class="button blue" href="tel:000-000-0000">Call Now</a>
-                <a class="button blue" href="#">Call Now</a>
+                <a class="button blue" href="tel:000-000-0000">Call Us</a>
+                <a class="button blue" href="#message">Message Us</a>
             </div>
         </div>
     </div>
@@ -21,7 +21,7 @@
         <div class="wrap">
             <div class="row">
                 <div class="col-xs-12">
-                    <h2>About Flatirons Recovery</h2>
+                    <h2>About Us</h2>
                     <hr>
                 </div>
                 <div class="col-xs-12">
@@ -32,55 +32,54 @@
                 </div>
             </div>
             <div class="row center-xs">
-                <a class="button border" href="/about">Learn More</a>
+                <a class="button border" href="/about">About Us</a>
             </div>
         </div>
     </div>
     <div class="col-xs-12 col-sm half-bg" style="background-image: url('/assets/images/wooden-fence.jpg');"></div>
 </div>
 
-<!-- <div class="orange"> -->
-    <div class="wrap">
-        <div class="row">
-            <div class="col-xs">
-                <h2>Our Team</h2>
-                <hr>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 col-sm-3">
-                <img src="https://via.placeholder.com/600x900" alt="">
-                <h4>Name, Title</h4>
-            </div>
-            <div class="col-xs-12 col-sm-3">
-                <img src="https://via.placeholder.com/600x900" alt="">
-                <h4>Name, Title</h4>
-            </div>
-            <div class="col-xs-12 col-sm-3">
-                <img src="https://via.placeholder.com/600x900" alt="">
-                <h4>Name, Title</h4>
-            </div>
-            <div class="col-xs-12 col-sm-3">
-                <img src="https://via.placeholder.com/600x900" alt="">
-                <h4>Name, Title</h4>
-            </div>
-        </div>
-        <div class="row center-xs">
-            <a class="button blue" href="/about#team">Meet Our Team</a>
+<div class="wrap">
+    <div class="row">
+        <div class="col-xs">
+            <h2>Our Team</h2>
+            <hr>
         </div>
     </div>
-<!-- </div> -->
+    <div class="row">
+        <div class="col-xs-12 col-sm-3">
+            <img src="https://via.placeholder.com/600x900" alt="">
+            <h4>Name, Title</h4>
+        </div>
+        <div class="col-xs-12 col-sm-3">
+            <img src="https://via.placeholder.com/600x900" alt="">
+            <h4>Name, Title</h4>
+        </div>
+        <div class="col-xs-12 col-sm-3">
+            <img src="https://via.placeholder.com/600x900" alt="">
+            <h4>Name, Title</h4>
+        </div>
+        <div class="col-xs-12 col-sm-3">
+            <img src="https://via.placeholder.com/600x900" alt="">
+            <h4>Name, Title</h4>
+        </div>
+    </div>
+    <div class="row center-xs">
+        <a class="button blue" href="/about#team">Our Team</a>
+    </div>
+</div>
 
 <div class="blue">
     <div class="wrap">
         <div class="row center-xs">
-            <h2>Get In Touch</h2>
+            <h2>Contact Us</h2>
         </div>
         <div class="row center-xs">
             <div class="col-xs">
-                <h4>If you would like to reach out to a treatment professional at Flatirons Recovery Center<br />
-                    call us at 000-000-0000</h4>
-
+                <h4>If you would like to reach out to a treatment professional at Flatirons Recovery Center
+                    <br />
+                    call us at <a href="tel:000-000-0000">000-000-0000</a>
+                </h4>
                 <a class="button border" href="/contact">Contact Us</a>
             </div>
         </div>
@@ -140,10 +139,10 @@
     </div>
 </div>
 
-<div class="wrap">
+<div class="wrap" id="message">
     <form class="row">
         <div class="col-xs-12">
-            <h2>Contact Us</h2>
+            <h2>Message Us</h2>
             <p>Send us a confidential message, and one of our admissions professionals will follow up with you.</p>
         </div>
         <div class="col-xs-12 col-sm-6">
