--- a/src/contact/index.v.html
+++ b/src/contact/index.v.html
@@ -1,4 +1,4 @@
-<style media="screen">
+<style>
     .main {
         background-image: url('/contact/log.jpg');
     }
@@ -21,9 +21,9 @@
     <div class="col-xs-12 col-sm-4 col-md-3 orange">
         <div>
             <h3>Contact Info:</h3>
-            <p><strong>Phone:</strong><br /> 555.555.5555</p>
-            <p><strong>Email:</strong><br /> info@flatironsrecovery.com</p>
-            <p><strong>Address:</strong><br /> 123 abs st, Boulder CO</p>
+            <p><strong>Phone:</strong><br /> <a href="tel:000-000-0000">000-000-0000</a></p>
+            <p><strong>Email:</strong><br /> <a href="mailto:info@flatironsrecovery.com">info@flatironsrecovery.com</a></p>
+            <p><strong>Address:</strong><br /> <a href="#">123 abs st, Boulder CO</a></p>
             <p>whether you're ready to begin your recovery, or you just want to learn more, please reach out today!</p>
             <p>Social</p>
         </div>
