--- a/src/admission/index.v.html
+++ b/src/admission/index.v.html
@@ -10,8 +10,8 @@
         <div class="wrap">
             <div class="row center-xs">
                 <div class="col-xs">
-                    <h1>ADMISSIONS</h1>
-                    <h3>learn more about our addiction treatment center</h3>
+                    <h1>ADMISSION</h1>
+                    <h3>learn more about our admission process</h3>
                 </div>
             </div>
         </div>
