moved and reused partials bug fixes

--- a/src/contact/index.v.html
+++ b/src/contact/index.v.html
@@ -10,7 +10,7 @@
             <div class="row center-xs">
                 <div class="col-xs">
                     <h1>CONTACT</h1>
-                    <h3>get in touch with a Flatirons Recovery professional</h3>
+                    <h3>Speak with a Flatirons Recovery professional</h3>
                 </div>
             </div>
         </div>
@@ -21,8 +21,8 @@
     <div class="col-xs-12 col-sm-4 col-md-3 orange">
         <div>
             <h3>Contact Info:</h3>
-            <p><strong>Phone:</strong><br /> <a href="tel:000-000-0000">000-000-0000</a></p>
-            <p><strong>Email:</strong><br /> <a href="mailto:info@flatironsrecovery.com">info@flatironsrecovery.com</a></p>
+            <p><strong>Phone:</strong><br /> <a href="tel:000-000-0000" data-track="click: phone, click">000-000-0000</a></p>
+            <p><strong>Email:</strong><br /> <a href="mailto:contact@flatironsrecovery.com">contact@flatironsrecovery.com</a></p>
             <p><strong>Address:</strong><br /> <a href="#">123 abs st, Boulder CO</a></p>
             <p>whether you're ready to begin your recovery, or you just want to learn more, please reach out today!</p>
             <p>Social</p>
