--- a/src/index.v.html
+++ b/src/index.v.html
@@ -9,7 +9,7 @@
                 <h1>Flatirons Recovery</h1>
             </div>
             <div class="col-xs-12">
-                <a class="button blue" href="tel:000-000-0000">Call Us</a>
+                <a class="button blue" href="tel:000-000-0000" data-track="click: phone, click">Call Us</a>
                 <a class="button blue" href="#message">Message Us</a>
             </div>
         </div>
@@ -70,20 +70,7 @@
 </div>
 
 <div class="blue">
-    <div class="wrap">
-        <div class="row center-xs">
-            <h2>Contact Us</h2>
-        </div>
-        <div class="row center-xs">
-            <div class="col-xs">
-                <h4>If you would like to reach out to a treatment professional at Flatirons Recovery Center
-                    <br />
-                    call us at <a href="tel:000-000-0000">000-000-0000</a>
-                </h4>
-                <a class="button border" href="/contact">Contact Us</a>
-            </div>
-        </div>
-    </div>
+    <!-- { "partial": "/partials/call-to-action-1.p.html" } -->
 </div>
 
 <div class="row">
