--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -37,7 +37,7 @@
             </nav>
         </div>
         <div class="col-xs-6 col-md-2 end-xs last-md">
-            <a class="phone" href="tel:000-000-0000">000-000-0000</a>
+			<a class="phone" href="tel:000-000-0000" data-track="click: phone, click">000-000-0000</a>
         </div>
     </header>
 
@@ -62,7 +62,7 @@
 			<div class="col-xs-12 col-sm-4">
 				<h3>Contact</h3>
                 <br>
-				<a href="tel:" data-track="click: phone, click">Phone Number</a>
+				<a href="tel:000-000-0000" data-track="click: phone, click">000-000-0000</a>
 				<br>
 				<br>
 				<a href="mailto:contact@flatironsrecovery.com" data-track="click: email, click">contact@flatironsrecovery.com</a>
