therapy to treatment

--- a/src/index.v.html
+++ b/src/index.v.html
@@ -79,7 +79,7 @@
         <div class="wrap">
             <div class="row">
                 <div class="col-xs-12">
-                    <h2>Therapy</h2>
+                    <h2>Drug and Alcohol Treatment</h2>
                     <hr>
                 </div>
                 <div class="col-xs-12">
