--- a/src/treatment/index.v.html
+++ b/src/treatment/index.v.html
@@ -9,8 +9,8 @@
         <div class="wrap">
             <div class="row center-xs">
                 <div class="col-xs">
-                    <h1>THERAPY</h1>
-                    <h3>learn more about our addiction treatment center</h3>
+                    <h1>TREATMENT</h1>
+                    <h3>treatment and therapy at our addiction treatment center</h3>
                 </div>
             </div>
         </div>
