--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -23,7 +23,7 @@
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="/about">About</a></li>
-                    <li><a href="/therapy">Therapy</a></li>
+                    <li><a href="/treatment">Treatment</a></li>
                     <li><a href="/addiction">Addiction</a></li>
                     <li>
                         <a>More</a>
