--- a/src/mental-health/index.v.html
+++ b/src/mental-health/index.v.html
@@ -10,7 +10,7 @@
             <div class="row center-xs">
                 <div class="col-xs">
                     <h1>MENTAL HEALTH</h1>
-                    <h3>dual diagnosis treamtnet and mental health</h3>
+                    <h3>dual diagnosis treatment and mental health</h3>
                 </div>
             </div>
         </div>
