--- a/src/index.v.html
+++ b/src/index.v.html
@@ -83,16 +83,23 @@
                     <hr>
                 </div>
                 <div class="col-xs-12">
-                    <h3>Individual</h3>
+
+                    <h3>What Treatment Looks Like at Flatirons Recovery</h3>
+
+
+                    <p>At Flatirons Recovery, clients can expect compassionate, evidence-based treatment for substance use and <a href="/mental-health">dual-diagnosis disorders</a>.</p>
+                    <p>Our treatment team focuses on healing the whole individual, instead of focusing on one specific area of a person’s life that may be problematic. We do this by working with clients to develop action plans for relapse prevention, beginning to heal trauma, learning skills for more successful coping with mental health challenges, eating healthier, getting more consistent exercise, and having fun in recovery.</p>
+
+                    <!-- <h3>Individual</h3>
                     <p>At Flatirons Recovery Center, clients will engage in a weekly, 1-hour individual therapy session in order to develop more insight into the painful habitual patterns that have influenced their substance use disorder, as well as to develop more ability to take appropriate action to begin shifting those.</p>
                     <h3>Group</h3>
                     <p>Along side individual therapy, clients will engage in 30-hours of group programming during PHP/Day Treatment programming, and 9-15 hours of group programming during Intensive Outpatient programming.</p>
                     <h3>Family</h3>
-                    <p>At Flatirons Recovery Center, client will engage in a bi-weekly, 1-hour family therapy session, in order to develop more insight into the systemic ways in which substance use disorders may be impacting their family life.</p>
+                    <p>At Flatirons Recovery Center, client will engage in a bi-weekly, 1-hour family therapy session, in order to develop more insight into the systemic ways in which substance use disorders may be impacting their family life.</p> -->
                 </div>
             </div>
             <div class="row center-xs">
-                <a class="button border" href="/therapy">Learn More - Therapy</a>
+                <a class="button border" href="/treatment">Learn More - Treatment</a>
             </div>
         </div>
     </div>
