--- a/src/treatment/index.v.html
+++ b/src/treatment/index.v.html
@@ -20,8 +20,14 @@
 <div class="wrap">
     <div class="row">
         <div class="col-xs-12">
-            <h2>Therapy</h2>
+            <h2>Treatment</h2>
+            <p>At Flatirons Recovery, clients can expect compassionate, evidence-based treatment for substance use and dual-diagnosis disorders. Our treatment team focuses on healing the whole individual, instead of focusing on one specific area of a person’s life that may be problematic. We do this by working with clients to develop action plans for relapse prevention, beginning to heal trauma, learning skills for more successful coping with mental health challenges, eating healthier, getting more consistent exercise, and having fun in recovery.</p>
 
+            <p>Treatment at Flatirons Recovery typically begins in our Day Treatment program (also known as PHP) for a period of at least 4 weeks, which meets Monday through Friday, from 8:30am – 3:00pm. During the week, clients will participate in a structured, comprehensive group therapy curriculum that includes, but is not limited to, education focused on relapse prevention, developing mindfulness skills, the neurobiology of addiction, nutrition for early recovery, having fun in sobriety, and engagement in community-based recovery models such as Smart Recovery and AA/12-Step.</p>
+
+            <p>During treatment, clients will also meet with a therapist for 1-hour of individual therapy per week, work with a Case Manager to develop a strong plan for transition from treatment, participate in family therapy on an as needed basis, as well as meet regularly with our Medical Director for any medication and/or physical health needs.</p>
+
+            <h2>Therapy</h2>
             <h3>individual</h3>
             <p>At Flatirons Recovery Center, clients will engage in a weekly, 1-hour individual therapy session in order to develop more insight into the painful habitual patterns that have influenced their substance use disorder, as well as to develop more ability to take appropriate action to begin shifting those.</p>
             <p>Topics that may be addressed during individual sessions include:</p>
