--- a/src/index.v.html
+++ b/src/index.v.html
@@ -26,9 +26,9 @@
                 </div>
                 <div class="col-xs-12">
                     <h3>Our Mission</h3>
-                    <p>The mission of Flatirons Recovery Center is to provide client-centered, evidence-based substance use/dual-diagnosis care that takes a holistic approach to treatment.</p>
+                    <p>The mission of Flatirons Recovery is to walk alongside our clients through the process of healing from addiction with greater clarity of purpose, connection to community, and ability to take right action in their lives.</p>
                     <h3>Why Us?</h3>
-                    <p>What differentiates Flatirons Recovery Center from other treatment providers is our commitment to small group sizes, treating clients as whole beings, and the continued development of a compassionate community in which to heal. Our highly skilled, kind, and compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and <a href="/mental-health">mental health disorders</a>.</p>
+                    <p>What differentiates Flatirons Recovery Center from other treatment providers is our <a href="/mindfulness">mindfulness-based curriculum</a>, commitment to small group sizes, and belief that all our clients are basically good, and must be treated as such. Our highly skilled, compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and <a href="/mental-health">mental health disorders</a>.</p>
                 </div>
             </div>
             <div class="row center-xs">
