menu link clean up

--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -22,7 +22,14 @@
     		<nav class="nav-bar">
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="/about">About</a></li>
+                    <li>
+                        <a>About</a>
+                        <ul>
+                            <a href="/about">About</a>
+                            <a href="/team">Team</a>
+                            <a href="/faq">FAQs</a>
+                        </ul>
+                    </li>
                     <li><a href="/treatment">Treatment</a></li>
                     <li><a href="/addiction">Addiction</a></li>
                     <li>
