--- a/src/index.v.html
+++ b/src/index.v.html
@@ -65,7 +65,7 @@
         </div>
     </div>
     <div class="row center-xs">
-        <a class="button blue" href="/about#team">Our Team</a>
+        <a class="button blue" href="/team">Our Team</a>
     </div>
 </div>
 
