--- a/src/treatment/index.v.html
+++ b/src/treatment/index.v.html
@@ -1,6 +1,6 @@
 <style>
     .main {
-        background-image: url('/therapy/blue-brook.jpg');
+        background-image: url('/treatment/blue-brook.jpg');
     }
 </style>
 
