--- a/src/addiction/index.v.html
+++ b/src/addiction/index.v.html
@@ -1,4 +1,8 @@
-
+<!-- {
+    "title": "Addictions We Treat | Flatirons Recovery",
+    "description": "The common addictions Flatirons Recovery treats and how to tell if you or a loved one is abusing a substance. Learn more about addictions we treat!",
+    "keywords": "mens alcohol addiction, substance abuse, colorado drug addiction"
+} -->
 <style>
     .main {
         background-image: url('/admission/flatirons-hill.jpg');
