--- a/src/admission/index.v.html
+++ b/src/admission/index.v.html
@@ -1,3 +1,8 @@
+<!-- {
+    "title": "Admissions | Flatirons Recovery",
+    "description": "Our treatment center addmission process and what to expect.",
+    "keywords": "rehab admission process"
+} -->
 
 <style>
     .main {
