--- a/src/contact/index.v.html
+++ b/src/contact/index.v.html
@@ -1,3 +1,9 @@
+<!-- {
+    "title": "Contact | Flatirons Recovery",
+    "description": "How to contact Flatirons Recovery, a drug and alcohol treatment center in Colorado.",
+    "keywords": "contact flatirons recovery"
+} -->
+
 <style>
     .main {
         background-image: url('/contact/log.jpg');
