--- a/src/faq/index.v.html
+++ b/src/faq/index.v.html
@@ -1,3 +1,8 @@
+<!-- {
+    "title": "Frequently Asked Questions | Flatirons Recovery",
+    "description": "See the frequently asked questions at Flatirons Recovery. See our FAQs, and learn more!",
+    "keywords": "covid 19, infectious disease"
+} -->
 
 <style>
     .main {
@@ -19,7 +24,7 @@
 </div>
 
 <div class="wrap">
-    
+
     <details>
         <summary>What should I bring to treatment?</summary>
         <p>The following is a list of items that you may bring with you to treatment or have a loved one drop off after you have admitted into the care of Flatirons Recovery Center.</p>
