--- a/src/index.v.html
+++ b/src/index.v.html
@@ -1,3 +1,8 @@
+<!-- {
+    "title": "Flatirons Recovery Center | Colorado Substance Abuse Treatment",
+    "description": "Flatirons Recovery Center is a Colorado Recovery Center that helps people through the process of healing from addiction with greater clarity of purpose and connection to community. Learn more!",
+    "keywords": "addiction treatment, substance use, mental health disorder"
+} -->
 
 <div class="cover">
     <div class="gradient">
