--- a/src/mental-health/index.v.html
+++ b/src/mental-health/index.v.html
@@ -1,3 +1,9 @@
+<!-- {
+    "title": "Mental Health Treatment | Flatirons Recovery",
+    "description": "Mental health and dual diagnosis treatment and how it refers to Flatirons Recovery. Learn more!",
+    "keywords": "dual diagnosis treatment, mental health disorders, treatment therapy"
+} -->
+
 <style>
     .main {
         background-image: url('/mental-health/hills-sunset.jpg');
