--- a/src/mindfulness/index.v.html
+++ b/src/mindfulness/index.v.html
@@ -1,3 +1,9 @@
+<!-- {
+    "title": "Mindfulness | Flatirons Recovery",
+    "description": "Mindfulness - the capacity to be with whatever it is that is happening with you at any given moment, in a non-judgmental way. Read more.",
+    "keywords": "mindfulness practices, drug and alcohol treatment"
+} -->
+
 <style>
     .main {
         background-image: url('/mindfulness/summit-view.jpg');
