--- a/src/team/index.v.html
+++ b/src/team/index.v.html
@@ -1,3 +1,8 @@
+<!-- {
+    "title": "Meet Our Team | Flatirons Recovery",
+    "description": "Meet our team of compassionate professions. Learn more about the people that make Flatirons Recovery.",
+    "keywords": "professional team, compassionate therapists, treatment professional"
+} -->
 
 <style>
     .main {
@@ -11,7 +16,7 @@
             <div class="row center-xs">
                 <div class="col-xs">
                     <h1>TEAM</h1>
-                    <h3>meet our team</h3>
+                    <h3>meet our team of compassionate professionals</h3>
                 </div>
             </div>
         </div>
