--- a/src/treatment/index.v.html
+++ b/src/treatment/index.v.html
@@ -1,3 +1,9 @@
+<!-- {
+    "title": "Drug and Alcohol Treatment | Flatirons Recovery",
+    "description": "Learn about our drug and alcohol treatment program, with a timeline of what clients should expect. ",
+    "keywords": "evidence-based treatment, treatment, disorders, addiction therapy"
+} -->
+
 <style>
     .main {
         background-image: url('/treatment/blue-brook.jpg');
