--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -14,30 +14,52 @@
 </head>
 <body>
 
-    <header class="row middle-xs center-xs">
-        <div class="col-xs-6 col-md-2 start-xs">
-            <object class="logo-full" data="/assets/logo-full.svg" type="image/svg+xml">flatirons recovery logo full</object>
+    <header>
+        <div class="row middle-xs">
+            <div class="col-xs-6 start-xs">
+                <a href="/">
+                    <object class="logo-full" data="/assets/logo-full.svg" type="image/svg+xml">flatirons recovery logo full</object>
+                </a>
+            </div>
+            <div class="col-xs-6 end-xs">
+    			<!-- <a class="phone" href="tel:000-000-0000" data-track="click: phone, click">000-000-0000</a> -->
+    			<a class="phone" href="tel:000-000-0000" data-track="click: phone, click">
+                    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="11rem" height="2rem">
+                        <mask id="mask">
+                            <rect x="0" y="0" width="100%" height="100%" fill="white" />
+                            <text
+                                x="50%"
+                                y="50%"
+                                font-size="100%"
+                                text-anchor="middle"
+                                fill="rgb(var(--blak))"
+                                dominant-baseline="middle"
+                                >000-000-0000</text>
+                        </mask>
+                        <rect x="0" y="0" rx="2" width="100%" height="100%" mask="url(#mask)" fill="rgb(var(--black))" />
+                    </svg>
+                </a>
+            </div>
         </div>
-        <div class="col-xs-12 col-md-8 left-xs last-xs">
-    		<nav class="nav-bar">
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about">About</a></li>
-                    <li><a href="/treatment">Treatment</a></li>
-                    <li><a href="/addiction">Addiction</a></li>
-                    <li>
-                        <a>More</a>
-                        <ul>
-                            <li><a href="/mental-health">Mental Health</a></li>
-                            <li><a href="/admission">Admission</a></li>
-                            <li><a href="/contact">Contact</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-        <div class="col-xs-6 col-md-2 end-xs last-md">
-			<a class="phone" href="tel:000-000-0000" data-track="click: phone, click">000-000-0000</a>
+        <div class="row middle-xs center-xs">
+            <div class="col-xs-12">
+        		<nav class="nav-bar">
+                    <ul>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/about">About</a></li>
+                        <li><a href="/treatment">Treatment</a></li>
+                        <li><a href="/addiction">Addiction</a></li>
+                        <li>
+                            <a>More</a>
+                            <ul>
+                                <li><a href="/mental-health">Mental Health</a></li>
+                                <li><a href="/admission">Admission</a></li>
+                                <li><a href="/contact">Contact</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
 
