--- a/src/index.v.html
+++ b/src/index.v.html
@@ -8,7 +8,7 @@
     <div class="gradient">
         <div class="row center-xs">
             <div class="col-xs-12">
-                <object class="logo-icon" data="/assets/logo-icon.svg" type="image/svg+xml">flatirons recovery logo icon</object>
+                <object class="logo-solid" data="/assets/logo-solid.svg" type="image/svg+xml">flatirons recovery logo solid</object>
             </div>
             <div class="col-xs-12">
                 <h1>Flatirons Recovery</h1>
