--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -21,11 +21,10 @@
         <div class="row middle-xs">
             <div class="col-xs-6 start-xs">
                 <a href="/">
-                    <object class="logo-full" data="/assets/logo-full.svg" type="image/svg+xml">flatirons recovery logo full</object>
+                    <object class="logo-holo" data="/assets/logo-holo.svg" type="image/svg+xml">flatirons recovery logo holo</object>
                 </a>
             </div>
             <div class="col-xs-6 end-xs">
-    			<!-- <a class="phone" href="tel:000-000-0000" data-track="click: phone, click">000-000-0000</a> -->
     			<a class="phone" href="tel:000-000-0000" data-track="click: phone, click">
                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="11rem" height="2rem">
                         <mask id="mask">
