fixes and clean up, added social icons

--- a/src/index.v.html
+++ b/src/index.v.html
@@ -113,17 +113,17 @@
 <div class="green">
     <div class="wrap">
         <div class="row center-xs">
-            <div class="col-xs">
+            <div class="col-xs-12">
                 <h2>Dual Diagnosis Treatment</h2>
             </div>
         </div>
-        <div class="row center-xs">
-            <div class="col-xs">
+        <div class="row">
+            <div class="col-xs-12 col-md-6">
                 <h3>Mental Health</h3>
                 <p>Dual-diagnosis treatment refers to an individual who meets DSM-V diagnostic criteria for both a substance use disorder, as well as a mental health disorder such as, <strong>anxitey</strong> disorder, <strong>bi-polar</strong> disorder, and <strong>post traumatic stress</strong> disorder. These are also referred to as co-occurring disorders.</p>
                 <a class="button border" href="/mental-health">Learn More - Mental Health</a>
             </div>
-            <div class="col-xs">
+            <div class="col-xs-12 col-md-6">
                 <h3>Addiction Treatment</h3>
                 <p>Dual-diagnosis treatment refers to an individual who meets DSM-V diagnostic criteria for both a substance use disorder, as well as a mental health disorder such as, <strong>anxitey</strong> disorder, <strong>bi-polar</strong> disorder, and <strong>post traumatic stress</strong> disorder. These are also referred to as co-occurring disorders.</p>
                 <a class="button border" href="/addiction">Learn More - Addictions</a>
