--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -74,8 +74,14 @@
 			<div class="col-xs-12 col-sm-4">
 				<h3>Follow</h3>
                 <br>
-				<a class="badge" href="#f" target="_blank" rel="noopener">
+				<a class="badge" href="https://www.facebook.com/Flatirons-Recovery-628637104427552/" target="_blank" rel="noopener">
 					<object data="/assets/f.svg" type="image/svg+xml">Facebook Logo</object>
+				</a>
+				<a class="badge" href="https://twitter.com/flatironscenter" target="_blank" rel="noopener">
+					<object data="/assets/t.svg" type="image/svg+xml">Twitter Logo</object>
+				</a>
+				<a class="badge" href="https://www.instagram.com/flatironsrecovery/" target="_blank" rel="noopener">
+					<object data="/assets/i.svg" type="image/svg+xml">Instagram Logo</object>
 				</a>
 			</div>
 			<div class="col-xs-12 col-sm-4">
