--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -98,13 +98,15 @@
 				<a href="mailto:contact@flatironsrecovery.com" data-track="click: email, click">contact@flatironsrecovery.com</a>
 			</div>
 		</div>
-		<div class="row center-xs">
+		<!-- <div class="row center-xs">
             <div class="col-xs-12 col-sm-4">
                 <a href="#l" target="_blank" rel="noopener">
                     <img src="" alt="LegitScript">
                 </a>
             </div>
-		</div>
+		</div> -->
+        <br>
+        <br>
         <div class="row center-xs middle-xs">
 			<div class="col-xs-4">
 				<a href="/">&copy; Flatirons Recovery</a>
