--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
     <title><!-- { "variable": "title" } --></title>
+    
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="description" content="<!-- { "variable": "description" } -->">
     <meta name="keywords" content="<!-- { "variable": "keywords" } -->">
+
+	<script>window.AID='UA-';</script>
+	<script src="/assets/analytic.min.js"></script>
 
     <script src="/assets/nav-bar.min.js" defer></script>
 
