clean up from email list

--- a/src/index.v.html
+++ b/src/index.v.html
@@ -88,10 +88,7 @@
                     <hr>
                 </div>
                 <div class="col-xs-12">
-
                     <h3>What Treatment Looks Like at Flatirons Recovery</h3>
-
-
                     <p>At Flatirons Recovery, clients can expect compassionate, evidence-based treatment for substance use and <a href="/mental-health">dual-diagnosis disorders</a>.</p>
                     <p>Our treatment team focuses on healing the whole individual, instead of focusing on one specific area of a person’s life that may be problematic. We do this by working with clients to develop action plans for relapse prevention, beginning to heal trauma, learning skills for more successful coping with mental health challenges, eating healthier, getting more consistent exercise, and having fun in recovery.</p>
 
@@ -120,12 +117,12 @@
         <div class="row center-xs">
             <div class="col-xs">
                 <h3>Mental Health</h3>
-                <p>Dual-diagnosis treatment refers to an individual who meets DSM-V diagnostic criteria for both a substance use disorder, as well as a mental health disorder such as, <strong>anxitey</strong> disorder, <strong>bi-polar</strong> disorder, and <strong>post traumatic stress</strong> disorder. These are also referred to as co-occurring disorders.</p>
+                <p>Dual-diagnosis treatment refers to an individual who meets DSM-V diagnostic criteria for both a substance use disorder, as well as a mental health disorder such as, <strong>anxiety</strong> disorder, <strong>bi-polar</strong> disorder, <strong>depression</strong> and <strong>post traumatic stress</strong> disorder. These are also referred to as co-occurring disorders.</p>
                 <a class="button border" href="/mental-health">Learn More - Mental Health</a>
             </div>
             <div class="col-xs">
                 <h3>Addiction Treatment</h3>
-                <p>Dual-diagnosis treatment refers to an individual who meets DSM-V diagnostic criteria for both a substance use disorder, as well as a mental health disorder such as, <strong>anxitey</strong> disorder, <strong>bi-polar</strong> disorder, and <strong>post traumatic stress</strong> disorder. These are also referred to as co-occurring disorders.</p>
+                <p>Need content here</p>
                 <a class="button border" href="/addiction">Learn More - Addictions</a>
             </div>
         </div>
