--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -55,6 +55,8 @@
                             <a>More</a>
                             <ul>
                                 <li><a href="/mental-health">Mental Health</a></li>
+                                <li><a href="/faq">FAQ</a></li>
+                                <li><a href="/mindfulness">Mindfulness</a></li>
                                 <li><a href="/admission">Admission</a></li>
                                 <li><a href="/contact">Contact</a></li>
                             </ul>
