--- a/src/treatment/index.v.html
+++ b/src/treatment/index.v.html
@@ -56,12 +56,22 @@
                 </ul>
         </div>
         <div class="col-xs-12 col-sm">
-            <h3>Group Therapy</h3>
-            <p>At Flatirons Recovery Center, clients will engage in 30-hours of group programming during PHP/Day Treatment programming, and 9-15 hours of group programming during Intensive Outpatient programming.</p>
-        </div>
-        <div class="col-xs-12 col-sm">
             <h3>Family Therapy</h3>
             <p>At Flatirons Recovery Center, client will engage in a bi-weekly, 1-hour family therapy session, in order to develop more insight into the systemic ways in which substance use disorders may be impacting their family life.</p>
+            <ul>
+
+                <li><a href="https://www.smartrecovery.org/family-friends-and-addiction-recovery/" target="_blank">SMART Recovery Family and Friends</a></li>
+                <li><a href="https://www.nami.org/Home" target="_blank">NAMI</a></li>
+                <li><a href="https://al-anon.org/" target="_blank">Al-Anon</a></li>
+                <li><a href="https://al-anon.org/newcomers/teen-corner-alateen/" target="_blank">Alateen</a></li>
+                <li><a href="http://grasphelp.org/" target="_blank">GRASP</a></li>
+                <li><a href="https://www.familiesanonymous.org/" target="_blank">Families Anonymous</a></li>
+            </ul>
+        </div>
+        <div class="col-xs-12 col-sm">
+            <h3>Group Therapy</h3>
+            <p>At Flatirons Recovery Center, clients will engage in 30-hours of group programming during PHP/Day Treatment programming, and 9-15 hours of group programming during Intensive Outpatient programming.</p>
+            <!-- NOTE: more content coming -->
         </div>
         <div class="col-xs-12">
             <h3>Support Groups for Family Members</h3>
