--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title><!-- { "variable": "title" } --></title>
-    
+
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -20,6 +20,10 @@
     <script src="/index.js" defer></script>
 </head>
 <body>
+    <div class="banner">
+        <p>How Flatirons is handling COVID-19 <a href="/covid-19">Learn More</a>.</p>
+        <button class="blue close">X</button>
+    </div>
 
     <header>
         <div class="row middle-xs">
